[package]
name = "neo-mime"
version = "0.1.0" # remember to update html_root_url
authors = ["Federico Morrone <contact@morrone.dev>", "Sean McArthur <sean@seanmonstar.com>"]
license = "MIT"
description = "Strongly Typed Mimes"
documentation = "https://docs.rs/neo-mime"
repository = "https://github.com/morr0ne/neo-mime"
keywords = ["mime", "media-extensions", "media-types"]
edition = "2018"

[dependencies]
neo-mime-macro = { path = "./neo-mime-macro", version = "0.1.1", optional = true }
neo-mime-parse = { path = "./neo-mime-parse", version = "0.1.0" }
proc-macro-hack = { version = "0.5.19", optional = true }
quoted-string = "0.2.2"
serde = { version = "1.0.125", optional = true }

[features]
macro = ["neo-mime-macro", "proc-macro-hack"]
# "serde" optional support

[workspace]
members = [
    "./",
    "neo-mime-macro",
    "neo-mime-parse",
]
