[package]
name = "neo-mime-macro"
version = "0.1.0"
description = "mime procedural macros"
repository = "https://github.com/morr0ne/neo-mime"
authors = ["Federico Morrone <contact@morrone.dev>", "Sean McArthur <sean@seanmonstar.com>"]
license = "MIT"
edition = "2018"

[lib]
name = "neo_mime_macro"
proc-macro = true

[dependencies]
neo-mime-parse = { path = "../neo-mime-parse", version = "0.1.0" }
proc-macro2 = "0.4"
proc-macro-hack = "0.5"
quote = "0.6"
syn = "0.15"
